--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="script(test).js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <button class="add-book">Add book</button>
+  <!-- <button class="add-book">Add book</button> -->
+  <button class="open-modal">Add book</button>
+  <dialog>
+    <form method="dialog">
+      <label for="title">Title</label>
+      <input type="text" id="title" autofocus>
+      <label for="author">Author</label>
+      <input type="text" id="author">
+      <label for="pages">Pages</label>
+      <input type="text" id="pages">
+      <label for="read">Read</label>
+      <input type="text" id="read">
+      <button class="submit" type="submit">Submit</button>
+    </form>
+  </dialog>
   <table>
     <tr>
       <td>Title</td>
