--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- <button class="add-book">Add book</button> -->
   <button class="open-modal">Add book</button>
   <dialog>
     <form method="dialog">
@@ -17,8 +16,8 @@
       <input type="text" id="author">
       <label for="pages">Pages</label>
       <input type="text" id="pages">
-      <label for="read">Read</label>
-      <input type="text" id="read">
+      <label for="read">Read?</label>
+      <input type="checkbox" id="read">
       <button class="submit" type="submit">Submit</button>
     </form>
   </dialog>
