--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+    <title>Document</title>
+</head>
+<body>
+    <button class="new-book">New Book</button>
+    <dialog class="dialog">
+        <form class="form">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title">
+            <label for="author">Author</label>
+            <input type="text" id="author" name="author">
+            <label for="pages">Pages</label>
+            <input type="number" id="pages" name="pages">
+            <label for="read">Read</label>
+            <input type="checkbox" id="read" name="read">
+            <button type="submit" class="submit">Submit</button>
+        </form>
+    </dialog>
+</body>
+</html>
+
+<!-- 1st attempt -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
@@ -30,4 +59,4 @@
     </tr>
   </table>
 </body>
-</html>
+</html> -->
